Mon Oct 22 08:49:05 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.6: Release tar file made.

Sun Oct 14 23:19:12 2007  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am: Avoid GNU make-specific `make -C'.

Sun Oct 14 19:37:01 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* configure.ac: Add check for `atexit', needed by replacement
	version of `snprintf'.

Sun Sep 30 21:50:59 2007  Arnold D. Robbins  <arnold@skeeve.com>

	Rationalize locale's influence on %'g, strtonum, and input.

	* awk.h (use_lc_numeric): Add declaration.
	* builtin.c (format_tree): Add check for quote_flag and set
	LC_NUMERIC so that The Right Thing gets done, then reset it.
	(do_strtonum): Pass use_lc_numeric as second arg to isnondecimal.
	* main.c (main): Have do_posix set use_lc_numeric also.

Thu Sep 27 21:36:23 2007  Stepan Kasal       <skasal@redhat.com>

	* configure.ac: Do not instantiate version.c; remove the hack
	to keep version.c from being removed upon `make distclean'.
	* Makefile.am (version.c): New rule.
	(.c.i, SUFFIXES): Remove, `.i' is unused.
	(MAINTAINERCLEANFILES): Remove awkgram.c; Automake takes care of that.

Wed Sep 26 14:40:13 2007  Eli Zaretskii      <eliz@gnu.org>

	* builtin.c (format_tree): Handle non-standard snprintf that
	returns a negative value when the buffer is too small.

Tue Sep 25 23:27:41 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* ChangeLog: Removed all leading spaces. Fixed up formatting of
	entries to have capital letter after the colon. Fixed a number of
	entries to have the '*' in the right place. ASCII instead of ascii.
	Capitalize Linux. (Is this anal-retentive or what? Sheesh.)

Tue Sep 25 08:24:11 2007  KIMURA Koichi      <kimura.koichi@canon.co.jp>

	* awk.h: Add include of <io.h> for Visual Studio.
	* regex_internal.h: Do the right thing for replacing alloca.

Sat Sep 22 23:26:27 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* field.c (set_FIELDWIDTHS): Restore behavior of 3.1.4 that allowed